resolve z-index issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,17 +20,6 @@
 17. Section: Blog - Contact
 18. Crossbrowser Fallbacks
 -------------------------------------------------------------------*/
-/*
-div#particles-ground {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-	z-index: -10;
-}
-*/
-
 div#particles-ground {
 		-moz-transform: scale(1.0);
 		-webkit-transform: scale(1.0);
@@ -42,7 +31,7 @@ div#particles-ground {
 		left: 0;
 		width: 100%;
 		height: 100vh;
-		z-index: 10;
+		z-index: -10;
 	}
 
 		div#particles-ground:before, div#particles-ground:after {
@@ -99,6 +88,10 @@ div#particles-ground {
 			-ms-filter: blur(0.2rem);
 			filter: blur(0.2rem);
 		}
+
+section#body {
+		z-index: 20;
+}
 /* ==========================================================
 ! 01. MIXINS / VARIABLES
 ==============	=========================================== */
